--- a/_config.yml
+++ b/_config.yml
@@ -34,10 +34,10 @@ disqus: kpgarrod
 # social icons and sharing options
 social:
   - icon:	twitter
-    url:	https://twitter.com/dirkfabisch
+    url:	https://twitter.com/kpgarrod
     desc: Follow me on twitter
     share_url: http://twitter.com/share
-    share_title: ?text=
+    share_title: ?text=kpgarrod
     share_link: "&amp;url="
 
 #  - icon:	facebook
@@ -48,14 +48,14 @@ social:
 #    share_link: "&amp;u="
 
   - icon:	github
-    url:	https://github.com/dirkfabisch
+    url:	https://github.com/kpgarrod
     desc:	Fork me on github
     share_url:
     share_title:
     share_link:
 
 #  - icon:	google-plus
-#    url:	https://google.com/???
+#    url:	https://google.com/kpgarrod
 #    desc:	Add me on google+
 #    share_url:
 #    share_title:
