--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ gems:
   - jekyll-paginate
 
 # Site settings
-title: "Appz Limited"
+title: "Share it freely - but don't take a slice of my pie!"
 description: > # this means to ignore newlines until "email:"
    We build business applications quickly  
 email: keith@appzco.uk
