--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@ gems:
   - jekyll-paginate
 
 # Site settings
-title: "Share it fairly - but don't take a slice of my pie!"
+title: "Share it fairly"
 description: > # this means to ignore newlines until "email:"
-   We build business applications quickly  
-email: keith@appzco.uk
+   but don't take a slice of my pie!   
+email: keith@shareitfairly.org
 #blog logo
 logo: "https://dummyimage.com/200x200/000/fff.png&text=$"
 float_logo: true # true, false (default)
@@ -24,7 +24,7 @@ paginate:	5
 url: "http://shareitfairly.org" # the base hostname & protocol for your site
 baseurl: ""
 #used to display twitter cards
-twitter_handle: '@kpgarrod'
+twitter_handle: '@shareitfairly'
 
 #fill in disqus shortname to use disqus
 disqus: kpgarrod
@@ -34,10 +34,10 @@ disqus: kpgarrod
 # social icons and sharing options
 social:
   - icon:	twitter
-    url:	https://twitter.com/kpgarrod
+    url:	https://twitter.com/shareitfairly
     desc: Follow me on twitter
     share_url: http://twitter.com/share
-    share_title: ?text=kpgarrod
+    share_title: ?text=shareitfairly
     share_link: "&amp;url="
 
 #  - icon:	facebook
@@ -48,7 +48,7 @@ social:
 #    share_link: "&amp;u="
 
   - icon:	github
-    url:	https://github.com/kpgarrod
+    url:	https://github.com/shareitfairly
     desc:	Fork me on github
     share_url:
     share_title:
