--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: > # this means to ignore newlines until "email:"
    but don't take a slice of my pie!   
 email: keith@shareitfairly.org
 #blog logo
-logo: "https://dummyimage.com/200x200/000/fff.png&text=$"
+logo: "/assets/images/SIF_.png"
 float_logo: true # true, false (default)
 
 # blog cover
@@ -27,7 +27,7 @@ baseurl: ""
 twitter_handle: '@shareitfairly'
 
 #fill in disqus shortname to use disqus
-disqus: kpgarrod
+disqus: shareitfairly
 
 #google_analytics: UA-XXXXX-X
 
